syntax = "proto3";

package chapter;

import "google/protobuf/timestamp.proto";


option go_package = "github.com/chimas/GoProject/proto/chapter";

service ChapterService {
  rpc GetChapters (ChaptersRequest) returns (ChaptersResponse);
}

message ChaptersRequest {
  string name = 1;
  int32 chapter = 2;
}

message ChaptersResponse{
  int32 chapter = 1;
  repeated string img = 2;
  string name = 3;
  string manga_name = 4;
  google.protobuf.Timestamp created_at = 5;
}